--- a/less/main-content.less
+++ b/less/main-content.less
@@ -38,7 +38,7 @@
 
 		.right {
 			width: 25%;
-			padding: 5rem;
+			padding: 2rem;
 			@media @tablet {width: 35%;}
 		
 			h2 {
@@ -47,6 +47,9 @@
 		
 			address {
 				padding: 1rem 0 0;
+				span {
+					font-size: 3rem;
+				}
 			}
 			address a {
 				color: @font-styles;
